Fixed problem with failing tests

--- a/example_pages/ext4_01.html
+++ b/example_pages/ext4_01.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Ext JS 4 Test Page</title>
-<link rel="stylesheet" media="screen" href="https://cdn.sencha.com/ext/gpl/4.2.1/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css">
-<script src="https://cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
+<link rel="stylesheet" media="screen" href="//cdn.sencha.com/ext/gpl/4.2.1/packages/ext-theme-classic/build/resources/ext-theme-classic-all.css">
+<script src="//cdn.sencha.com/ext/gpl/4.2.1/ext-all.js"></script>
 <script>
 Ext.onReady(function () {
     Ext.application({
@@ -13,7 +13,6 @@ Ext.onReady(function () {
         launch : function() {
         }
     });
-    window.Ext = Ext;
 
     var win = Ext.create('Ext.window.Window', {
         title: 'Example window'
